# ge_poc

./: Dockerfile  README.md  pyproject.toml  requirements.txt
