[tool.poetry]
name = "ge_poc"
version = "0.1.0"
description = ""
authors = ["Sergei Tiutnev <tiutnev@fitanalytics.com>"]

[tool.poetry.dependencies]
python = "^3.7"
great-expectations = "^0.14.10"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
